Changed width of iframe to max-width to fix display issue on small screens.

--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -15,7 +15,7 @@
   iframe {
     
     border: 1px solid #ccc;
-    width: 100% !important;
+    max-width: 100% !important;
     height: 675px !important;
 
   } // .iframe
